--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,8 +109,9 @@ input {
 	--color-yellow: #FFC700;
     --color-black: #050505;
     --color-white: #FFFFFF;
+    --color-text: #394356;
 
-	--spacing--side: calc(150 / 1680 * 100vw);
+	--spacing--side: 8.75vw;
 }
 html, body{
 	width: 100vw;
@@ -155,25 +156,24 @@ a:focus{
 }
 
 
-.button{
+.button {
 	font-size: 18px;
 	font-weight: 500;
 	padding: 16px 40px;
 	border-radius: 30px;
 	display: inline-block;
 	background-color: var(--color-blue);
-	/* transition: border-radius 0.2s ease-out; */
   text-decoration: none;
   width: 100%;
 
 }
 
-.button__primary {
+.button {
   overflow: hidden;
   position: relative;
 }
 
-.button__primary:after {
+.button:after {
   background: #fff;
   content: "";
   height: 155px;
@@ -187,10 +187,30 @@ a:focus{
   opacity: 0.25;
 }
 
-.button__primary:hover {
+.button__secondary{
+	padding: 14px 40px;
+	border: 2px solid rgba(255, 255, 255, 0.4);
+	background-color: transparent;
+    transition: 0.3s;
+}
+.button__tertiary{
+	background-color: var(--color-pink);
+    transition: 0.3s;
+}
+
+.button:hover {
     background: linear-gradient(-225deg, #112EC5 0%, #D92057 125%);
 }
-.button__primary:hover:after {
+
+.button__secondary:hover {
+    background-color: var(--color-pink);
+}
+
+.button__tertiary:hover {
+    background-color: var(--color-blue);
+}
+
+.button:hover:after {
   left: 120%;
   transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
 }
@@ -200,16 +220,13 @@ a:focus{
   font-size: 16px;
 }
 
-
-.button-secondary{
-	padding: 14px 40px;
-	border: 2px solid rgba(255, 255, 255, 0.4);
-
-	background-color: transparent;
+.button__secondary-span,
+.button__tertiary-span {
+    font-size: 18px;
 }
-.button-alt{
-	background-color: var(--color-pink);
-}
+
+
+
 .container{
 	padding: 0 var(--spacing--side);
 }
@@ -316,6 +333,7 @@ a:focus{
 	transition: width 0.2s ease-out;
 	background-color: var(--color-blue);
 }
+
 .header__link:hover:after{
 	width: calc(100% - 38px);
 }
@@ -323,9 +341,11 @@ a:focus{
 .header__link.button:after{
 	content: none;
 }
+
 .header__close{
 	display: none;
 }
+
 .header__nav--open .header__close{
 	display: block;
 	position: absolute;
@@ -341,23 +361,23 @@ a:focus{
 /* Main banner */
 
 .banner {
-	height: calc(90vh - 80px);
-	padding-top: 10vh;
-	margin-top: 80px;
-  position: relative;
-  overflow: hidden;
+    height: calc(90vh - 80px);
+    padding-top: 10vh;
+    margin-top: 80px;
+    position: relative;
+    overflow: hidden;
 }
 
 .banner::after{
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: url('images/banner.jpg') no-repeat center center;
-  background-size: cover;
-  animation: pulse 20s ease;
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: url('../img/banner.jpg') no-repeat center center;
+    background-size: cover;
+    animation: pulse 20s ease;
 }
 
 .banner .container{
@@ -368,9 +388,6 @@ a:focus{
 }
 
 .banner__subtitle {
-    font-size: 20px;
-	font-weight: 500;
-	color: var(--color-pink);
     animation: 1s ease 0.5s both fromLeft;
 }
 
@@ -382,7 +399,7 @@ a:focus{
     animation: 1s ease 1s both fromBottom;
 }
 
-.banner__button-secondary {
+.banner__button__secondary {
     animation: 1s ease 1.25s both fromBottom;
     margin-left: 20px;
 }
@@ -391,19 +408,21 @@ a:focus{
     display: flex;
     align-items: center;
 }
-/*--------------------------------------------------------------
-# Features
---------------------------------------------------------------*/
-.features-and-quote{
+
+/* Features */
+
+.features {
 	background: linear-gradient(-225deg, #112EC5 0%, #D92057 125%);
 	padding-bottom: 180px;
 	text-align: center;
 }
-.features{
-	display: inline-block;
-	margin: -100px 0 60px 0;
+.features__container {
+	margin: 0 0 80px 0;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 3.75vw;
 }
-.feature{
+.features__item {
 	flex: 1;
 	position: relative;
 	border-radius: 15px;
@@ -412,28 +431,28 @@ a:focus{
 	filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-.feature.loaded:nth-child(1) {
+.features__item.loaded:nth-child(1) {
     animation: 0.5s ease 1s both fromBottom;
 }
-.feature.loaded:nth-child(2){
+.features__item.loaded:nth-child(2){
 	animation: 0.5s ease 1.25s both fromBottom;
 }
-.feature.loaded:nth-child(3){
+.features__item.loaded:nth-child(3){
 	animation: 0.5s ease 1.5s both fromBottom;
 }
-.feature.hidden{
+.features__item.hidden{
 	opacity: 0;
 }
-.feature-inner{
+.features__inner{
 	overflow: hidden;
 	clip-path: polygon(100% 0, 100% 90%, 88% 100%, 0 100%, 0 0);
 }
 
-.feature img{
+.features__image{
 	display: block;
 }
 
-.feature .overlay{
+.features__overlay{
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -441,17 +460,16 @@ a:focus{
 	height: 100%;
 	background: linear-gradient(rgba(22, 26, 37, 0) 50%, rgba(22, 26, 37, 0.6));
 }
-.feature .workouts__content{
+.features__content{
 	text-align: left;
-
 	position: absolute;
 	bottom: 30px;
 	left: 30px;
 }
-.feature .workouts__content h3{
+.features__title {
 	margin-bottom: 0.4em;
 }
-.feature .workouts__content span{
+.features__text {
 	font-size: 18px;
 	color: var(--color-yellow);
 }
@@ -471,6 +489,7 @@ a:focus{
 
 .quote__text.hidden {
     opacity: 0;
+    line-height: 1em;
 }
 
 .quote__text{
@@ -480,7 +499,7 @@ a:focus{
 }
 
 .quote__text.loaded {
-    animation: 1.25s fromTop ease-in-out;
+    animation: 1.25s fromTop ease both;
 }
 
 .quote__card.hidden {
@@ -488,7 +507,7 @@ a:focus{
 }
 
 .quote__card.loaded {
-    animation: 1s fromTop 0.25s ease-in-out both;
+    animation: 1s fromTop 0.25s ease both;
 }
 
 .quote__image {
@@ -538,11 +557,19 @@ a:focus{
 .workouts__video-play-button {
 	max-width: 128px;
 	height: auto;
-
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+    transition: opacity 0.5s, transform 0.5s;
+
+
+}
+
+.workouts__video:hover .workouts__video-play-button {
+    opacity: 0.5;
+
+
 }
 .workouts__content{
 	padding: 60px var(--spacing--side) 0 var(--spacing--side);
@@ -556,9 +583,14 @@ a:focus{
 }
 .workouts__subtitle{
 	color: var(--color-blue);
+    font-size: 24px;
+	font-weight: 500;
 }
 .workouts__text{
+    font-size: 18px;
 	margin-bottom: 40px;
+    color: var(--color-text);
+    line-height: 150%;
 }
 
 /* modal */
@@ -613,46 +645,54 @@ a:focus{
 	right: 0;
 }
 
-
 /* Playlist  */
 
 .playlists {
-	padding-bottom: 100px;
 	background-color: var(--color-white);
-	color: var(--color-black);
 }
+
+.playlists__inner {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 3.75vw;
+}
+
 .playlists__title-main{
+    color: var(--color-black);
 	margin-bottom: 30px;
+    font-weight: 500;
 }
 .playlists__item,
-.level{
+.level {
 	text-align: center;
-	transition: opacity 0.4s, transform 0.4s;
 	margin-bottom: 30px;
 }
-.playlists__item.hidden,
-.level.hidden{
+
+.playlists__item.loaded:nth-child(1) {
+    animation: 0.5s ease both fromBottom;
+}
+.playlists__item.loaded:nth-child(2){
+	animation: 0.5s ease 0.25s both fromBottom;
+}
+.playlists__item.loaded:nth-child(3){
+	animation: 0.5s ease 0.5s both fromBottom;
+}
+
+.playlists__item.hidden{
 	opacity: 0;
-	transform: translateY(100px);
 }
-.playlists__item:nth-child(2),
-.level:nth-child(2){
-	transition-delay: 0.1s;
-}
-.playlists__item:nth-child(3),
-.level:nth-child(3){
-	transition-delay: 0.2s;
-}
-.playlists svg {
+
+.playlists__clip-path {
 	width: 0;
 	height: 0;
 }
 .playlists__image {
-    -webkit-clip-path: url(#svgPath);
-	clip-path: url(#svgPath);
+    -webkit-clip-path: url(#svgClipPath);
+	clip-path: url(#svgClipPath);
 }
 .playlists__title{
 	margin: 20px 0 10px 0;
+    color: var(--color-black);
 }
 .playlists__text {
 	color: var(--color-blue);
@@ -663,7 +703,7 @@ a:focus{
 
 .subscribe {
 	height: 90vh;
-	background: url('images/subscribe.jpg') no-repeat center center;
+	background: url('../img/subscribe.jpg') no-repeat center center;
 	background-size: cover;
 }
 
@@ -693,10 +733,19 @@ a:focus{
 	justify-content: center;
 }
 .subscribe__text{
+    font-size: 18px;
+    line-height: 150%;
 	margin-bottom: 40px;
 }
 .subscribe__form {
     display: flex;
+}
+
+.subscribe__subtitle,
+.banner__subtitle {
+    font-size: 24px;
+    color: var(--color-pink);
+    font-weight: 500;
 }
 
 .subscribe__input,
@@ -737,22 +786,48 @@ a:focus{
 
 .levels{
 	text-align: center;
-
 	padding: 100px var(--spacing--side);
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 3.75vw;
+}
+
+.levels__item.loaded:nth-child(1) {
+    animation: 0.5s ease both fromBottom;
+}
+.levels__item.loaded:nth-child(2){
+	animation: 0.5s ease 0.25s both fromBottom;
+}
+.levels__item.loaded:nth-child(3){
+	animation: 0.5s ease 0.5s both fromBottom;
+}
+
+.levels__item.hidden{
+	opacity: 0;
 }
 
 .levels__item {
 	border: 4px solid var(--color-blue);
 	border-radius: 16px;
-
 	padding: 50px 30px;
+    transition: 1s ease;
+}
+
+.levels__item:hover {
+    box-shadow: 0px 0px 20px 7px rgba(46,79,255,1);
 }
 
 .levels__icon {
-	height: 7.14vw;
+	height: 8vw;
 	min-height: 80px;
 	width: auto;
 	margin-bottom: 60px;
+    transition: all 2s;
+}
+
+.levels__item:hover .levels__icon{
+
+    transform: scale(1.25);
 }
 
 .levels__subtitle,
@@ -771,10 +846,13 @@ a:focus{
 /* Testimonials */
 
 .testimonials {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 3.75vw;
 	text-align: center;
-	padding: 110px var(--spacing--side);
+	padding: 80px var(--spacing--side) 120px;
 	background-color: var(--color-white);
-	color: #394356;
+	color: var(--color-text);
 }
 .testimonials .image{
 	height: 54px;
@@ -789,11 +867,20 @@ a:focus{
 	opacity: 0;
 	transform: translateY(-100px);
 }
-.testimonials__image--wordpress {
-	margin: 6px 0 29px 0;
+
+.testimonials__image-container {
+    display: flex;
+    height: 100px;
+    align-items: center;
+    justify-content: center;
 }
-.testimonials__image--mention {
-	margin: 10px 0 25px 0;
+
+.testimonials__image--meteor {
+    margin-top: -16px;
+}
+.testimonials__text {
+    font-size: 16px;
+    line-height: 150%;
 }
 
 /* Footer */
@@ -820,33 +907,28 @@ a:focus{
     .header__button {
         margin-left: 20px;
     }
-	.features{
-		display: flex;
-		margin: 0 0 120px 0;
+	.features__container{
+        grid-template-columns: repeat(3, 1fr);
 	}
-	.features > article{
-		margin-left: 20px;
-	}
-	.features > article:first-child{
-		margin-left: 0;
-	}
-	.feature{
+
+	.features__item {
 		margin: -100px 0 0 0;
 	}
-	.feature .overlay{
+	.features__overlay{
 		background: linear-gradient(rgba(22, 26, 37, 0.2), rgba(22, 26, 37, 0.8));
 	}
-	.feature .workouts__content{
+	.features__content{
 		bottom: 50%;
 		transform: translateY(50%);
 	}
-	.feature span{
+	.feature__text{
 		font-size: 16px;
 	}
 
 	.subscribe{
 		height: 68vw;
 	}
+
 }
 
 @media screen and (min-width: 960px) {
@@ -859,39 +941,28 @@ a:focus{
 	h3{
 		font-size: 28px;
 	}
-
-	.align-horizontal{
-		display: flex;
-	}
-	.align-horizontal > .feature,
-    .align-horizontal > .playlists__item,
-    .align-horizontal > .testimonials__item,
-    .align-horizontal > .level {
-		margin-left: 60px;
-	}
-	.align-horizontal > .feature:first-child,
-    .align-horizontal > .playlists__item:first-child,
-    .align-horizontal > .testimonials__item:first-child,
-    .align-horizontal > .level:first-child {
-		margin-left: 0;
-	}
+    .playlists__inner {
+        grid-template-columns: repeat(3, 1fr);
+    }
 
 	.header__list{
 		display: flex;
-
 		position: static;
 		transform: none;
 		opacity: 1;
 		padding-top: 0;
 		transition: none;
 	}
+
 	.header__link{
 		line-height: 80px;
 	}
+
 	.header__link.button{
 		padding: 13px 30px;
 		margin-left: 20px;
 	}
+
 	.header__nav-toggle{
 		display: none;
 	}
@@ -904,10 +975,10 @@ a:focus{
 		margin-bottom: 1em;
 	}
 
-	.feature .overlay{
+	.features__overlay{
 		background: linear-gradient(rgba(22, 26, 37, 0) 50%, rgba(22, 26, 37, 0.6));
 	}
-	.feature .workouts__content{
+	.features__content{
 		bottom: 30px;
 		transform: none;
 	}
@@ -930,13 +1001,10 @@ a:focus{
 		margin: -100px 0 0 0;
 	}
 	.workouts__content{
-		width: 53%;
-		padding: 0 var(--spacing--side) 0 50px;
+		width: 50%;
+		padding: 0 var(--spacing--side) 0 20px;
 	}
 
-	.playlists{
-		padding-bottom: 150px;
-	}
 	.playlists__item,
 	.level{
 		margin-bottom: 0;
@@ -949,12 +1017,12 @@ a:focus{
 	.subscribe{
 		height: 48vw;
 	}
-	.subscribe .overlay{
+	.subscribe__overlay{
 		padding: 0;
 	}
-	.subscribe .content,
-	.subscribe .content-inner{
-		width: 40vw;
+	.subscribe__content,
+	.subscribe__content-inner{
+		width: 50vw;
 	}
 	.subscribe input{
 		font-size: 18px;
@@ -967,25 +1035,29 @@ a:focus{
 		width: auto;
 	}
 
-
-	.levels{
+	.levels {
 		padding: 140px var(--spacing--side);
+        grid-template-columns: repeat(3, 1fr);
 	}
+
 	.levels__item{
-		padding: 70px 54px;
+		padding: 70px 50px;
 	}
+
+    .testimonials {
+        grid-template-columns: repeat(4, 1fr);
+    }
 
 	.testimonials__item{
 		margin-bottom: 0;
 	}
 
-	.footer{
+	.footer {
 		font-size: 16px;
 	}
 }
 
 /* Animations */
-
 
 @keyframes pulse {
   0%{
