--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ strong {
 	font-weight: bold;
 }
 
-h1 {
+h2 {
 	font-size: 2em;
 	margin: 0.67em 0;
 }
@@ -124,16 +124,17 @@ h1, h2, h3 {
 	margin: 0;
 }
 
-h1 {
+h2 {
 	font-size: 32px;
 	font-weight: 300;
 	margin: 0.4em 0 0.6666em 0;
 }
 
-h3{
+h3 {
 	font-size: 24px;
 	font-weight: 500;
 }
+
 p{
 	margin: 0;
 }
@@ -165,6 +166,7 @@ a:focus{
 	background-color: var(--color-blue);
   text-decoration: none;
   width: 100%;
+  text-align: center;
 
 }
 
@@ -225,8 +227,6 @@ a:focus{
     font-size: 18px;
 }
 
-
-
 .container{
 	padding: 0 var(--spacing--side);
 }
@@ -246,15 +246,18 @@ a:focus{
 	background-color: var(--color-black);
 
 }
+
 .header.hidden {
 	opacity: 0;
 }
+
 .header__logo{
 	margin: 0;
 	position: relative;
 	z-index: 103;
     animation: fromTop 0.75s ease-in-out;
 }
+
 .header__logo.hidden {
     opacity: 0;
 }
@@ -263,53 +266,58 @@ a:focus{
 	display: block;
 	padding: 20px 0;
 }
+
 .header__nav-toggle{
 	display: inline-block;
 	line-height: 80px;
 	height: 80px;
 	padding-top: 27.5px;
 }
+
 .header__logo-image,
 .header__nav-toggle-img{
 	display: block;
 }
-.header__list{
+
+.header__list {
 	text-align: center;
 	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
-	padding-top: 20vh;
+	padding: 100px 40px 0;
 	transform: translateY(-100vh);
 	opacity: 0;
     align-items: center;
-
-	transition: opacity 0.2s, transform 0.3s;
-
+	transition: opacity 0.2s, transform 0.5s;
 	background-color: var(--color-black);
 }
 
 .header__button {
 	padding: 13px 30px;
+    margin-top: 20px;
 }
 
 .header__item:nth-child(1) {
     animation: 0.15s ease 0.5s both fromTop;
 }
+
 .header__item:nth-child(2) {
     animation: 0.25s ease 0.5s both fromTop;
 }
+
 .header__item:nth-child(3) {
     animation: 0.35s ease 0.5s both fromTop;
 }
+
 .header__item:nth-child(4) {
     animation: 0.45s ease 0.5s both fromTop;
 }
+
 .header__item:nth-child(5) {
     animation: 0.55s ease 0.5s both fromTop;
 }
-
 
 .header__nav--open .header__list{
 	transform: translateY(0);
@@ -323,23 +331,31 @@ a:focus{
 	position: relative;
 }
 
-.header__link:after{
-	content: "";
-	position: absolute;
-	top: 22px;
-	left: 19px;
-	width: 0;
-	height: 4px;
-	transition: width 0.2s ease-out;
-	background-color: var(--color-blue);
+.header__link:hover{
+    background: rgba(255, 255, 255, 1);
+    background: -webkit-linear-gradient( left, #ffffff 0%, #D92057 25%, #8da0ff 50%, #ffffff 100%) repeat;
+    -webkit-background-clip: text;
+    -ms-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -ms-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    text-fill-color: transparent;
+    -webkit-animation-name: text-masked-animation;
+    -webkit-animation-duration: 10s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+
 }
 
-.header__link:hover:after{
-	width: calc(100% - 38px);
-}
-
-.header__link.button:after{
-	content: none;
+@-webkit-keyframes text-masked-animation {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 1000px 0px;
+    }
 }
 
 .header__close{
@@ -350,7 +366,7 @@ a:focus{
 	display: block;
 	position: absolute;
 	top: 0;
-	right: 0;
+	right: 15px;
 	width: 80px;
 	height: auto;
 	padding: 30px;
@@ -377,7 +393,7 @@ a:focus{
     height: 100%;
     background: url('../img/banner.jpg') no-repeat center center;
     background-size: cover;
-    animation: pulse 20s ease;
+    animation: pulse-banner 20s ease;
 }
 
 .banner .container{
@@ -401,12 +417,13 @@ a:focus{
 
 .banner__button__secondary {
     animation: 1s ease 1.25s both fromBottom;
-    margin-left: 20px;
+    margin: 30px 0 0 0;
 }
 
 .banner__button-container {
     display: flex;
     align-items: center;
+    flex-direction: column;
 }
 
 /* Features */
@@ -429,6 +446,11 @@ a:focus{
 	overflow: hidden;
 	margin-bottom: 30px;
 	filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
+    transition: 1s ease;
+}
+
+.features__item:hover {
+    filter: drop-shadow(0 15px 7px rgba(0, 0, 0, 0.5));
 }
 
 .features__item.loaded:nth-child(1) {
@@ -522,6 +544,7 @@ a:focus{
 	display: block;
 	line-height: 150%;
 }
+
 .quote__location{
 	opacity: 60%;
 }
@@ -531,12 +554,16 @@ a:focus{
 
 .workouts {
 	justify-content: space-between;
-	padding-bottom: 120px;
-
+	padding-bottom: 40px;
 	background-color: var(--color-white);
 	color: var(--color-black);
 }
-.workouts__video{
+
+.workouts__video.hidden {
+    opacity: 0;
+}
+
+.workouts__video {
 	display: inline-block;
 	width: calc(100vw - 2 * var(--spacing--side));
 	position: relative;
@@ -544,16 +571,20 @@ a:focus{
 	transition: opacity 0.5s, transform 0.5s;
 	cursor: pointer;
 }
-.workouts__video.hidden{
-	transform: translateX(-100px);
-	opacity: 0;
+
+.workouts__video.loaded {
+    animation: 1s ease 0.25s both fromLeft;
 }
+
+
 .workouts__video-image{
 	transition: transform 0.5s;
 }
+
 .workouts__video:hover .workouts__video-image{
 	transform: scale(1.05);
 }
+
 .workouts__video-play-button {
 	max-width: 128px;
 	height: auto;
@@ -562,35 +593,46 @@ a:focus{
 	left: 50%;
 	transform: translate(-50%, -50%);
     transition: opacity 0.5s, transform 0.5s;
-
-
 }
 
 .workouts__video:hover .workouts__video-play-button {
     opacity: 0.5;
-
-
 }
-.workouts__content{
+.workouts__content {
 	padding: 60px var(--spacing--side) 0 var(--spacing--side);
 	align-self: center;
 
 	transition: opacity 0.4s 0.2s, transform 0.4s 0.2s;
 }
-.workouts__content.hidden{
-	opacity: 0;
-	transform: translateX(20px);
-}
-.workouts__subtitle{
+
+
+.workouts__subtitle {
 	color: var(--color-blue);
     font-size: 24px;
 	font-weight: 500;
+    display: block;
 }
+
 .workouts__text{
     font-size: 18px;
 	margin-bottom: 40px;
     color: var(--color-text);
     line-height: 150%;
+}
+
+.workouts__content.loaded .workouts__subtitle{
+    animation: 1s ease 0.25s both fromRight;
+}
+
+.workouts__content.loaded .workouts__title{
+    animation: 1s ease 0.5s both fromRight;
+}
+
+.workouts__content.loaded .workouts__text{
+    animation: 1s ease 0.75s both fromRight;
+}
+.workouts__content.loaded .workouts__button{
+    animation: 1s ease 1s both fromRight;
 }
 
 /* modal */
@@ -649,6 +691,7 @@ a:focus{
 
 .playlists {
 	background-color: var(--color-white);
+    padding-top: 40px;
 }
 
 .playlists__inner {
@@ -710,33 +753,36 @@ a:focus{
 .subscribe__overlay{
 	height: 100%;
 	padding: 100px 0;
-	background: linear-gradient(90deg, var(--color-black) 0%, rgba(5, 5, 5, 0) 72.32%);
+	background: linear-gradient(90deg, var(--color-black) 0%, rgba(5, 5, 5, 0.5) 70%);
 }
 
-.subscribe__content{
+.subscribe__content {
 	width: calc(100vw - 2 * var(--spacing--side));
 	height: 100%;
 	margin-left: var(--spacing--side);
-	overflow: hidden;
 
-	transition: opacity 0.6s ease-out 0.1s, width 0.6s ease-out 0.1s;
 }
-.subscribe__content.hidden{
-	width: 0;
+.subscribe__content.hidden {
 	opacity: 0;
 }
-.subscribe__content-inner{
+.subscribe__content.loaded {
+    opacity: 1
+}
+
+.subscribe__content-inner {
 	width: calc(100vw - 2 * var(--spacing--side));
 	height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 }
+
 .subscribe__text{
     font-size: 18px;
     line-height: 150%;
 	margin-bottom: 40px;
 }
+
 .subscribe__form {
     display: flex;
 }
@@ -748,9 +794,25 @@ a:focus{
     font-weight: 500;
 }
 
+.subscribe__content.loaded .subscribe__subtitle {
+    animation: 1s ease 0.25s both fromLeft;
+}
+
+.subscribe__content.loaded .subscribe__title {
+    animation: 1s ease 0.5s both fromLeft;
+}
+
+.subscribe__content.loaded .subscribe__text{
+    animation: 1s ease 0.75s both fromLeft;
+}
+
+.subscribe__content.loaded .subscribe__form{
+    animation: 1s ease 1s both fromLeft;
+}
+
 .subscribe__input,
 .subscribe__button {
-	font-size: 16px;
+	font-size: 18px;
 	line-height: 54px;
 	height: 54px;
 	border: none;
@@ -775,10 +837,11 @@ a:focus{
 	background-color: var(--color-blue);
 	width: 40%;
 	padding: 0 25px;
+    transition: 0.5s ease;
 }
 
 .subscribe__button:hover{
-	border-radius: 0;
+    background: var(--color-pink);
 }
 
 
@@ -878,6 +941,7 @@ a:focus{
 .testimonials__image--meteor {
     margin-top: -16px;
 }
+
 .testimonials__text {
     font-size: 16px;
     line-height: 150%;
@@ -891,7 +955,7 @@ a:focus{
 }
 
 .footer__text {
-    font-size: 14px;
+    font-size: 16px;
 }
 
 
@@ -906,6 +970,7 @@ a:focus{
     }
     .header__button {
         margin-left: 20px;
+        margin-top: 0;
     }
 	.features__container{
         grid-template-columns: repeat(3, 1fr);
@@ -932,7 +997,9 @@ a:focus{
 }
 
 @media screen and (min-width: 960px) {
-	h1{
+	.banner__title,
+    .workouts__title,
+    .subscribe__title {
 		font-size: calc(60 / 1680 * 100vw);
 	}
 	h2{
@@ -950,13 +1017,12 @@ a:focus{
 		position: static;
 		transform: none;
 		opacity: 1;
-		padding-top: 0;
+		padding: 0;
 		transition: none;
 	}
-
-	.header__link{
-		line-height: 80px;
-	}
+    .header__link{
+        line-height: 80px;
+    }
 
 	.header__link.button{
 		padding: 13px 30px;
@@ -968,12 +1034,20 @@ a:focus{
 	}
 
 	.banner {
-		height: 41.666666667vw; /* 700px / 1680px */
+		height: 42vw; /* 700px / 1680px */
 		padding-top: 10%;
 	}
-	.banner h1{
+	.banner__title{
 		margin-bottom: 1em;
 	}
+
+    .banner__button-container {
+        flex-direction: row;
+    }
+
+    .banner__button__secondary {
+        margin: 0 0 0 20px;
+    }
 
 	.features__overlay{
 		background: linear-gradient(rgba(22, 26, 37, 0) 50%, rgba(22, 26, 37, 0.6));
@@ -987,14 +1061,14 @@ a:focus{
 	.quote > article{
 		height: 350px;
 	}
-	.quote p{
+	.quote p {
 		font-size: 40px;
 		margin: 0 0 1em 0;
 	}
 
-	.workouts{
+	.workouts {
 		display: flex;
-		padding-bottom: 150px;
+		padding-bottom: 60px;
 	}
 	.workouts__video{
 		width: 47%;
@@ -1019,18 +1093,19 @@ a:focus{
 	}
 	.subscribe__overlay{
 		padding: 0;
+        background: linear-gradient(90deg, var(--color-black) 0%, rgba(5, 5, 5, 0) 70%);
 	}
 	.subscribe__content,
 	.subscribe__content-inner{
 		width: 50vw;
 	}
-	.subscribe input{
+	.subscribe__input{
 		font-size: 18px;
 	}
-	.subscribe input[type="text"]{
+	.subscribe__input{
 		width: 300px;
 	}
-	.subscribe input[type="submit"]{
+	.subscribe__button {
 		padding: 0 46px;
 		width: auto;
 	}
@@ -1059,7 +1134,7 @@ a:focus{
 
 /* Animations */
 
-@keyframes pulse {
+@keyframes pulse-banner {
   0%{
     transform: scale(1);
   }
@@ -1071,6 +1146,35 @@ a:focus{
   }
 }
 
+@-webkit-keyframes pulse-banner {
+  0%{
+    transform: scale(1);
+  }
+  50%{
+    transform: scale(1.5);
+  }
+  100%{
+    transform: scale(1);
+  }
+}
+
+@keyframes text-masked-animation {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 1000px 0px;
+    }
+}
+
+@-webkit-keyframes text-masked-animation {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 1000px 0px;
+    }
+}
 
 @-webkit-keyframes fromBottom {
 	from {
@@ -1132,38 +1236,6 @@ a:focus{
 	from {
 		-webkit-transform: translate3d(100px, 0, 0);
 		transform: translate3d(100px, 0, 0);
-		opacity: 0
-	}
-}
-
-@-webkit-keyframes fromCenter {
-	from {
-		-webkit-transform: scale(.8) translate3d(0, 0, 0);
-		transform: scale(.8) translate3d(0, 0, 0);
-		opacity: 0
-	}
-}
-
-@keyframes fromCenter {
-	from {
-		-webkit-transform: scale(.8) translate3d(0, 0, 0);
-		transform: scale(.8) translate3d(0, 0, 0);
-		opacity: 0
-	}
-}
-
-@-webkit-keyframes fromAbove {
-	from {
-		-webkit-transform: scale(1.2) translate3d(0, 0, 0);
-		transform: scale(1.2) translate3d(0, 0, 0);
-		opacity: 0
-	}
-}
-
-@keyframes fromAbove {
-	from {
-		-webkit-transform: scale(1.2) translate3d(0, 0, 0);
-		transform: scale(1.2) translate3d(0, 0, 0);
 		opacity: 0
 	}
 }
